force-app/main/default/objects/Account/fields/BrAddress__c.field-meta.xml
<CustomField>
    <fullName>BrAddress__c</fullName>
    <formula>BrLogradouro__c &amp; &quot;, &quot; &amp;  TEXT(BrNumero__c) &amp; &quot;, &quot; &amp; BrComplemento__c &amp; BR() &amp; BrBairro__c &amp; &quot; - &quot; &amp; BrLocalidade__c &amp; &quot; - &quot; &amp; BrUF__c &amp; BR() &amp;  TEXT(BrCEP__c)</formula>
    <inlineHelpText>Para alterar o endereço, clique em CONSULTAR CEP</inlineHelpText>
    <label>Endereço Brasileiro</label>
    <type>Text</type>
</CustomField>