force-app/main/default/objects/Account/fields/BrCEP__c.field-meta.xml
<CustomField>
    <fullName>BrCEP__c</fullName>
    <label>CEP</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>