force-app/main/default/objects/Account/fields/BrComplemento__c.field-meta.xml
<CustomField>
    <fullName>BrComplemento__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>