force-app/main/default/objects/Account/fields/BrIBGE__c.field-meta.xml
<CustomField>
    <fullName>BrIBGE__c</fullName>
    <label>IBGE</label>
    <length>7</length>
    <type>Text</type>
</CustomField>