force-app/main/default/objects/Account/fields/BrLocalidade__c.field-meta.xml
<CustomField>
    <fullName>BrLocalidade__c</fullName>
    <label>Localidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>