force-app/main/default/objects/Account/fields/BrLogradouro__c.field-meta.xml
<CustomField>
    <fullName>BrLogradouro__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>