force-app/main/default/objects/Account/fields/BrUF__c.field-meta.xml
<CustomField>
    <fullName>BrUF__c</fullName>
    <label>UF</label>
    <length>2</length>
    <type>Text</type>
</CustomField>